<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresa_detalhes">Sobre a Empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_preocessos">Processos</string>
    <string name="texto_reticencias">reticencias</string>
    <string name="texto_reticencias2">...</string>
    <string name="texto_clientes">Nossos Clientes</string>
    <string name="empresa_software">Empresa de software</string>
    <string name="empresa_auditoria">Empresa de Auditoria</string>
    <string name="texto_contato">Contato</string>
    <string name="texto_email">E-mail: consultoria@atm.com.br</string>
    <string name="texto_telefone">(11) 3333-2222</string>
    <string name="texto_telefoneatm">Telefone: (11) 3333-2222</string>
    <string name="texto_celularatm">Celular: (11) 9999-8888</string>
</resources>
