<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atmempresaconsultoria.cursoandroid.com.atmempresaconsultoria.ContatoActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:background="@drawable/detalhe_contato"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texto_contato"
        android:id="@+id/textView11"
        android:layout_marginBottom="38dp"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_centerHorizontal="true"
        android:textColor="#0d661a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto_email"
        android:id="@+id/textView12"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto_telefoneatm"
        android:id="@+id/textView13"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto_celularatm"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />
</RelativeLayout>
