<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atmempresaconsultoria.cursoandroid.com.atmempresaconsultoria.ClienteActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:background="@drawable/detalhe_cliente"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texto_clientes"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginBottom="31dp"
        android:textColor="#8ece11" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_marginTop="54dp"
        android:background="@drawable/cliente1"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empresa_software"
        android:id="@+id/textView9"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:layout_marginTop="51dp"
        android:background="@drawable/cliente2"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empresa_auditoria"
        android:id="@+id/textView10"
        android:layout_below="@+id/imageView6"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />
</RelativeLayout>
